doc: Add JupiterNotebook docs

--- a/data_pipelines/02-download-raw-pdf-documents.ipynb
+++ b/data_pipelines/02-download-raw-pdf-documents.ipynb
@@ -85,38 +85,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "84656235-d271-4336-b355-9e0fb33feea7",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "import os\n",
-    "import requests\n",
-    "\n",
+    "import os  # Used for creating directories and handling file paths\n",
+    "import requests  # Used for sending HTTP requests to download files\n",
     "\n",
     "def download_pdf_files(base_directory, docs_mapping, headers):\n",
-    "    # Create the base directory if it doesn't exist\n",
-    "    if not os.path.exists(base_directory):\n",
-    "        os.makedirs(base_directory)\n",
+    "    \"\"\"\n",
+    "    Downloads PDF files from given URLs and organizes them in a directory structure.\n",
     "\n",
+    "    Args:\n",
+    "        base_directory (str): The root directory where files will be stored.\n",
+    "        docs_mapping (dict): A dictionary mapping company names to lists of document metadata.\n",
+    "                             Example format:\n",
+    "                             {\n",
+    "                                 \"CompanyA\": [{\"doc_url\": \"http://example.com/doc1.pdf\", \"year\": 2020}, ...],\n",
+    "                                 ...\n",
+    "                             }\n",
+    "        headers (dict): Headers to include in the HTTP requests for downloading files.\n",
+    "\n",
+    "    Steps:\n",
+    "    1. Ensure the base directory exists.\n",
+    "    2. Create subdirectories for each company.\n",
+    "    3. Download and save each document, skipping already downloaded files or invalid URLs.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Ensure the base directory exists\n",
+    "    if not os.path.exists(base_directory):\n",
+    "        os.makedirs(base_directory)  # Create the base directory if it doesn't exist\n",
+    "\n",
+    "    # Iterate over each company and its associated documents\n",
     "    for company, docs in docs_mapping.items():\n",
-    "        company_directory = os.path.join(base_directory, company)\n",
+    "        company_directory = os.path.join(base_directory, company)  # Path for the company's directory\n",
     "\n",
     "        # Create a directory for the company if it doesn't exist\n",
     "        if not os.path.exists(company_directory):\n",
     "            os.makedirs(company_directory)\n",
     "\n",
+    "        # Process each document for the company\n",
     "        for doc_info in docs:\n",
-    "            doc_url = doc_info[\"doc_url\"]\n",
-    "            year = doc_info[\"year\"]\n",
+    "            doc_url = doc_info[\"doc_url\"]  # URL of the document\n",
+    "            year = doc_info[\"year\"]  # Year associated with the document\n",
     "\n",
-    "            # Skip empty URLs\n",
+    "            # Skip empty or missing URLs\n",
     "            if not doc_url:\n",
     "                continue\n",
     "\n",
-    "            # Construct the filename based on the year and the URL\n",
+    "            # Construct the filename using the year\n",
     "            filename = f\"annual_report_{year}.pdf\"\n",
     "            file_path = os.path.join(company_directory, filename)\n",
     "\n",
@@ -124,18 +144,20 @@
     "            if os.path.exists(file_path):\n",
     "                print(f\"{filename} already exists for {company}\")\n",
     "            else:\n",
-    "                # Download the document\n",
+    "                # Attempt to download the document\n",
     "                response = requests.get(doc_url, headers=headers)\n",
     "\n",
-    "                if response.status_code == 200:\n",
+    "                if response.status_code == 200:  # Check if the download was successful\n",
+    "                    # Save the document content to the file\n",
     "                    with open(file_path, \"wb\") as file:\n",
     "                        file.write(response.content)\n",
     "                    print(f\"Downloaded {filename} for {company}\")\n",
     "                else:\n",
+    "                    # Print an error message for failed downloads\n",
     "                    print(\n",
-    "                        f\"Failed to download {filename} for {company}\"\n",
-    "                        f\" (Status Code: {response.status_code})\"\n",
-    "                    )"
+    "                        f\"Failed to download {filename} for {company} \"\n",
+    "                        f\"(Status Code: {response.status_code})\"\n",
+    "                    )\n"
    ]
   },
   {
@@ -190,102 +212,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "4c577a0b-8db2-4089-98c8-87b9d91fc7b9",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "import json\n",
-    "from pypdf import PdfReader, PdfWriter\n",
-    "\n",
+    "import json  # Used for handling JSON data (serialization and deserialization)\n",
+    "from pypdf import PdfReader, PdfWriter  # For reading and writing PDF files\n",
     "\n",
     "def keep_relevant_pages_in_pdf(input_pdf_path, output_pdf_path, pages):\n",
-    "    input_pdf = PdfReader(input_pdf_path)\n",
-    "    print(f\"Number of pages is {len(input_pdf.pages)}\")\n",
-    "    print(f\"Relevant pages are {pages}\")\n",
-    "    output_pdf = PdfWriter()\n",
+    "    \"\"\"\n",
+    "    Extracts and saves specific pages from a PDF file.\n",
     "\n",
+    "    Args:\n",
+    "        input_pdf_path (str): Path to the input PDF file.\n",
+    "        output_pdf_path (str): Path to save the new PDF file containing only the relevant pages.\n",
+    "        pages (list): A list of page numbers (1-indexed) to extract from the input PDF.\n",
+    "\n",
+    "    Steps:\n",
+    "    1. Read the input PDF file.\n",
+    "    2. Extract the specified pages.\n",
+    "    3. Write the extracted pages to a new PDF file.\n",
+    "    \"\"\"\n",
+    "    input_pdf = PdfReader(input_pdf_path)  # Load the input PDF\n",
+    "    print(f\"Number of pages is {len(input_pdf.pages)}\")  # Print the total number of pages in the PDF\n",
+    "    print(f\"Relevant pages are {pages}\")  # Print the pages to be extracted\n",
+    "    output_pdf = PdfWriter()  # Initialize a PDF writer object\n",
+    "\n",
+    "    # Iterate over the list of page numbers\n",
     "    for page_num in pages:\n",
+    "        # Convert 1-indexed page number to 0-indexed for internal access\n",
     "        output_pdf.add_page(input_pdf.pages[page_num - 1])\n",
     "\n",
+    "    # Save the new PDF to the specified output path\n",
     "    with open(output_pdf_path, \"wb\") as f:\n",
     "        output_pdf.write(f)\n",
     "\n",
-    "\n",
     "def save_json(json_data, file_path):\n",
-    "    with open(file_path, \"w\") as f:\n",
-    "        json.dump(json_data, f)"
+    "    \"\"\"\n",
+    "    Saves a Python dictionary or list as a JSON file.\n",
+    "\n",
+    "    Args:\n",
+    "        json_data (dict or list): The data to be saved as JSON.\n",
+    "        file_path (str): The path where the JSON file will be saved.\n",
+    "\n",
+    "    Steps:\n",
+    "    1. Open the file in write mode.\n",
+    "    2. Serialize the Python object into a JSON string and write it to the file.\n",
+    "    \"\"\"\n",
+    "    with open(file_path, \"w\") as f:  # Open the file in write mode\n",
+    "        json.dump(json_data, f)  # Serialize the data and write it to the file\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "c60de1f3-c11e-4594-86cb-0a5424667c4c",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "import shutil\n",
-    "\n",
+    "import shutil  # For file operations like copying files\n",
     "\n",
     "def keep_relevant_pages_in_pdfs(\n",
     "    raw_base_directory, prepared_base_directory, docs_mapping\n",
     "):\n",
-    "    metadata = []\n",
-    "    # Create the base directory if it doesn't exist\n",
+    "    \"\"\"\n",
+    "    Processes PDF files by extracting specific pages and saving them into a structured directory,\n",
+    "    while maintaining metadata for further reference.\n",
+    "\n",
+    "    Args:\n",
+    "        raw_base_directory (str): The base directory where raw (unprocessed) PDF files are stored.\n",
+    "        prepared_base_directory (str): The base directory where processed PDF files will be stored.\n",
+    "        docs_mapping (dict): A dictionary mapping company names to lists of document metadata.\n",
+    "                             Example format:\n",
+    "                             {\n",
+    "                                 \"CompanyA\": [\n",
+    "                                     {\"doc_url\": \"http://example.com/doc1.pdf\", \n",
+    "                                      \"year\": 2020, \n",
+    "                                      \"pages\": [1, 2, 3]},\n",
+    "                                     ...\n",
+    "                                 ],\n",
+    "                                 ...\n",
+    "                             }\n",
+    "\n",
+    "    Steps:\n",
+    "    1. Create the `prepared_base_directory` if it doesn't exist.\n",
+    "    2. Iterate through each company and its documents, creating subdirectories as needed.\n",
+    "    3. For each document:\n",
+    "       - If specific pages are defined, extract and save those pages into a new PDF.\n",
+    "       - If no pages are defined, copy the original PDF as-is to the prepared directory.\n",
+    "    4. Save metadata about the processed files into a `metadata.json` file in the prepared base directory.\n",
+    "\n",
+    "    Returns:\n",
+    "        bool: Always returns `True` to indicate the process is complete.\n",
+    "    \"\"\"\n",
+    "    metadata = []  # To store metadata for all processed files\n",
+    "\n",
+    "    # Ensure the prepared base directory exists\n",
     "    if not os.path.exists(prepared_base_directory):\n",
     "        os.makedirs(prepared_base_directory)\n",
     "\n",
+    "    # Iterate over companies and their associated documents\n",
     "    for company, docs in docs_mapping.items():\n",
-    "        raw_company_directory = os.path.join(raw_base_directory, company)\n",
-    "        prepared_company_directory = os.path.join(prepared_base_directory, company)\n",
+    "        raw_company_directory = os.path.join(raw_base_directory, company)  # Raw files path\n",
+    "        prepared_company_directory = os.path.join(prepared_base_directory, company)  # Processed files path\n",
     "\n",
-    "        # Create a directory for the company if it doesn't exist\n",
+    "        # Create a directory for the company in the prepared directory\n",
     "        if not os.path.exists(prepared_company_directory):\n",
     "            os.makedirs(prepared_company_directory)\n",
     "\n",
     "        for doc_info in docs:\n",
-    "            doc_url = doc_info[\"doc_url\"]\n",
-    "            year = doc_info[\"year\"]\n",
-    "            pages = doc_info.get(\"pages\", [])\n",
+    "            doc_url = doc_info[\"doc_url\"]  # URL of the document\n",
+    "            year = doc_info[\"year\"]  # Year associated with the document\n",
+    "            pages = doc_info.get(\"pages\", [])  # Pages to extract (optional)\n",
+    "\n",
+    "            # Skip empty URLs\n",
     "            if not doc_url:\n",
     "                continue\n",
     "\n",
-    "            current_metadata = {}\n",
-    "            current_metadata[\"company\"] = company\n",
-    "            current_metadata[\"year\"] = year\n",
-    "            current_metadata[\"doc_url\"] = doc_url\n",
+    "            # Prepare metadata entry for the current document\n",
+    "            current_metadata = {\n",
+    "                \"company\": company,\n",
+    "                \"year\": year,\n",
+    "                \"doc_url\": doc_url,\n",
+    "            }\n",
     "\n",
-    "            # Construct the filename based on the year and the URL\n",
+    "            # Construct file paths\n",
     "            filename = f\"annual_report_{year}.pdf\"\n",
     "            input_pdf_path = os.path.join(raw_company_directory, filename)\n",
     "            output_pdf_path = os.path.join(prepared_company_directory, filename)\n",
     "\n",
-    "            current_metadata[\"local_pdf_path\"] = output_pdf_path\n",
+    "            current_metadata[\"local_pdf_path\"] = output_pdf_path  # Store output file path in metadata\n",
     "\n",
     "            if not pages:\n",
-    "                # When page numbers are not defined, we assume the user wants\n",
-    "                # to process the full file, therefore, copy it as is\n",
-    "                # to the prepared folder\n",
+    "                # If no pages are specified, copy the file as-is\n",
     "                shutil.copyfile(input_pdf_path, output_pdf_path)\n",
-    "                metadata.append(current_metadata)\n",
+    "                metadata.append(current_metadata)  # Add metadata for the copied file\n",
     "                continue\n",
     "\n",
+    "            # If pages are specified, process the relevant pages\n",
     "            relevant_pages = doc_info[\"pages\"]\n",
-    "            current_metadata[\"pages_kept\"] = relevant_pages\n",
+    "            current_metadata[\"pages_kept\"] = relevant_pages  # Record the kept pages in metadata\n",
     "\n",
-    "            # Skip empty URLs\n",
-    "\n",
+    "            # Extract and save the relevant pages\n",
     "            keep_relevant_pages_in_pdf(input_pdf_path, output_pdf_path, relevant_pages)\n",
     "\n",
-    "            metadata.append(current_metadata)\n",
+    "            metadata.append(current_metadata)  # Add metadata for the processed file\n",
     "\n",
+    "    # Save metadata to a JSON file in the prepared directory\n",
     "    save_json(metadata, os.path.join(prepared_base_directory, \"metadata.json\"))\n",
     "\n",
-    "    return True"
+    "    return True  # Indicate successful completion\n"
    ]
   },
   {
@@ -948,7 +1029,7 @@
   ],
   "instance_type": "ml.t3.medium",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -962,7 +1043,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
