--- a/data_pipelines/03-document-extraction.ipynb
+++ b/data_pipelines/03-document-extraction.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "653a51ce-5f25-48f3-a2f9-ce7964732768",
    "metadata": {},
    "outputs": [],
@@ -100,18 +100,23 @@
     "from textractor import Textractor\n",
     "from textractor.data.constants import TextractFeatures\n",
     "\n",
+    "# Get the current AWS region from the session\n",
     "region = boto3.session.Session().region_name\n",
+    "\n",
+    "# Initialize the Textractor with the current region\n",
     "# extractor = Textractor(profile_name=\"default\")\n",
     "extractor = Textractor(region_name=region)\n",
     "\n",
+    "# Specify the input document path\n",
     "input_document = \"raw_documents/prepared/Amazon/annual_report_2022.pdf\"\n",
     "\n",
+    "# Start the document analysis\n",
     "document = extractor.start_document_analysis(\n",
     "    file_source=input_document,\n",
-    "    s3_upload_path=f\"s3://{default_sagemaker_bucket}/input_documents/\",\n",
-    "    s3_output_path=f\"s3://{default_sagemaker_bucket}/output_documents/\",\n",
-    "    features=[TextractFeatures.LAYOUT],\n",
-    "    save_image=False\n",
+    "    s3_upload_path=f\"s3://{default_sagemaker_bucket}/input_documents/\",  # Path to upload the document to S3\n",
+    "    s3_output_path=f\"s3://{default_sagemaker_bucket}/output_documents/\", # Path for the Textract output in S3\n",
+    "    features=[TextractFeatures.LAYOUT],  # Specify the features to extract, e.g., layout\n",
+    "    save_image=False  # Do not save images in the output\n",
     ")"
    ]
   },
@@ -226,33 +231,35 @@
     "\n",
     "# https://docs.aws.amazon.com/bedrock/latest/userguide/bedrock-runtime_example_bedrock-runtime_InvokeModel_AnthropicClaude_section.html\n",
     "def generate_message(bedrock_runtime, model_id, system_prompt, messages, max_tokens):\n",
-    "\n",
-    "    body=json.dumps(\n",
+    "    # Create a JSON payload for the model request\n",
+    "    body = json.dumps(\n",
     "        {\n",
-    "            \"anthropic_version\": \"bedrock-2023-05-31\",\n",
-    "            \"max_tokens\": max_tokens,\n",
-    "            \"system\": system_prompt,\n",
-    "            \"messages\": messages\n",
+    "            \"anthropic_version\": \"bedrock-2023-05-31\",  # Version of the Anthropic model\n",
+    "            \"max_tokens\": max_tokens,                    # Maximum tokens for the response\n",
+    "            \"system\": system_prompt,                     # System prompt to provide context\n",
+    "            \"messages\": messages                         # User messages for the model\n",
     "        }\n",
     "    )\n",
+    "    # Invoke the model using the Bedrock runtime client\n",
     "    response = bedrock_runtime.invoke_model(body=body, modelId=model_id)\n",
+    "    # Parse the response body from the model\n",
     "    response_body = json.loads(response.get('body').read())\n",
     "\n",
     "    return response_body\n",
     "\n",
-    "\n",
     "def call_llm(user_input, model_id, system_prompt, bedrock_runtime, max_tokens=1000):\n",
-    "    \"\"\"Handle calls to Anthropic Claude message api.\"\"\"\n",
+    "    \"\"\"Handle calls to Anthropic Claude message API.\"\"\"\n",
     "    try:\n",
-    "        # Prompt with user turn only.\n",
-    "        user_message =  {\"role\": \"user\", \"content\": user_input}\n",
+    "        # Prepare the user message for the model\n",
+    "        user_message = {\"role\": \"user\", \"content\": user_input}\n",
     "        messages = [user_message]\n",
+    "        # Generate a response using the generate_message function\n",
     "        return generate_message(bedrock_runtime, model_id, system_prompt, messages, max_tokens)\n",
     "    except ClientError as err:\n",
-    "        message=err.response[\"Error\"][\"Message\"]\n",
+    "        # Log and print the error if the model invocation fails\n",
+    "        message = err.response[\"Error\"][\"Message\"]\n",
     "        logger.error(\"A client error occurred: %s\", message)\n",
-    "        print(\"A client error occured: \" +\n",
-    "            format(message))\n",
+    "        print(\"A client error occurred: \" + format(message))\n",
     "\n"
    ]
   },
@@ -280,27 +287,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "71d0306d-08fa-4b49-8ad3-05a0d97f0174",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define a template prompt for improving markdown formatting\n",
     "user_prompt = \"\"\"\n",
     "Improve the markdown while keeping all original information. Put the improved markdown inside a <results> xml tags with no explanation:\n",
     "\\n{markdown_doc}\n",
     "\"\"\".strip()\n",
     "\n",
+    "# Define a system prompt for guiding the language model's task\n",
     "system_prompt = \"Your task is to review and improve the results of Amazon textract in markdown.\"\n",
     "\n",
-    "\n",
     "def improve_textract_markdown_output(document, llm_model_id):\n",
-    "    improved_markdown = []\n",
+    "    improved_markdown = []  # Initialize a list to store improved markdown for each page\n",
     "    for i in range(len(document.pages)):\n",
+    "        # Format the user input prompt with markdown from the current document page\n",
     "        user_input = user_prompt.format(markdown_doc=document.pages[i].to_markdown())\n",
+    "        \n",
+    "        # Call the language model with the user input, model ID, and system prompt\n",
     "        result = call_llm(user_input, llm_model_id, system_prompt, bedrock_runtime, max_tokens=3000)\n",
-    "        # Extract the text between the <results> XML tags only.\n",
+    "        \n",
+    "        # Extract the improved markdown text from within the <results> XML tags\n",
     "        improved_markdown.append(result[\"content\"][0][\"text\"].split(\"<results>\")[-1].split(\"</results>\")[0].strip())\n",
-    "    return improved_markdown"
+    "    \n",
+    "    return improved_markdown  # Return the list of improved markdown content"
    ]
   },
   {
@@ -353,36 +366,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "46f8e0ed-65fd-4a1d-9cba-ddb5846d6822",
    "metadata": {},
    "outputs": [],
    "source": [
     "def extract_pages_as_markdown(input_document):\n",
-    "\n",
+    "    # Start document analysis using Textract with specified features\n",
     "    document = extractor.start_document_analysis(\n",
     "        file_source=input_document,\n",
-    "        s3_upload_path=f\"s3://{default_sagemaker_bucket}/input_documents/\",\n",
-    "        s3_output_path=f\"s3://{default_sagemaker_bucket}/output_documents/\",\n",
-    "        features=[TextractFeatures.LAYOUT],\n",
-    "        save_image=False\n",
+    "        s3_upload_path=f\"s3://{default_sagemaker_bucket}/input_documents/\",  # S3 path for input\n",
+    "        s3_output_path=f\"s3://{default_sagemaker_bucket}/output_documents/\",  # S3 path for output\n",
+    "        features=[TextractFeatures.LAYOUT],  # Analyze document layout\n",
+    "        save_image=False  # Do not save images\n",
     "    )\n",
     "\n",
+    "    # Improve the extracted markdown using a language model\n",
     "    res = improve_textract_markdown_output(document, llm_model_id)\n",
+    "    # Create a list of pages with page index and text\n",
     "    pages = [{\"page\": indx, \"page_text\": text} for indx, text in enumerate(res)]\n",
-    "    return pages\n",
-    "\n",
+    "    return pages  # Return the list of pages with improved markdown\n",
     "\n",
     "def extract_docs_into_markdown(docs_metadata):\n",
-    "    results = []\n",
+    "    results = []  # Initialize list to store results for each document\n",
     "    for doc_meta in docs_metadata:\n",
-    "        doc_result_with_metadata = {}\n",
-    "        doc_result_with_metadata[\"metadata\"] = doc_meta\n",
-    "        doc_result_with_metadata[\"name\"] = doc_meta[\"doc_url\"].split(\"/\")[-1]\n",
-    "        doc_result_with_metadata[\"source_location\"] = doc_meta[\"doc_url\"]\n",
+    "        doc_result_with_metadata = {}  # Dictionary to store metadata and results\n",
+    "        doc_result_with_metadata[\"metadata\"] = doc_meta  # Add document metadata\n",
+    "        doc_result_with_metadata[\"name\"] = doc_meta[\"doc_url\"].split(\"/\")[-1]  # Extract document name\n",
+    "        doc_result_with_metadata[\"source_location\"] = doc_meta[\"doc_url\"]  # Add source location\n",
+    "        # Extract pages and add to the result with metadata\n",
     "        doc_result_with_metadata[\"pages\"] = extract_pages_as_markdown(doc_meta[\"local_pdf_path\"])\n",
-    "        results.append(doc_result_with_metadata)\n",
-    "    return results"
+    "        results.append(doc_result_with_metadata)  # Append the result to the list\n",
+    "    return results  # Return the list of document results with metadata"
    ]
   },
   {
