--- a/data_pipelines/04-create-and-load-embeddings-into-aurora-postgreSQL.ipynb
+++ b/data_pipelines/04-create-and-load-embeddings-into-aurora-postgreSQL.ipynb
@@ -103,6 +103,10 @@
    "outputs": [],
    "source": [
     "%%writefile scripts/prepare_and_load_embeddings.py\n",
+    "# This script is responsible for preparing and loading document embeddings into a PostgreSQL database with pgvector extension\n",
+    "# It processes documents, generates embeddings using Amazon Bedrock, and stores them in a vector database\n",
+    "\n",
+    "# Import necessary libraries for AWS services, database connections, and document processing\n",
     "import json\n",
     "import os\n",
     "from botocore.config import Config\n",
@@ -115,21 +119,24 @@
     "import psycopg2\n",
     "import sqlalchemy\n",
     "\n",
+    "# Initialize AWS SSM client for parameter store access\n",
     "ssm = boto3.client(\"ssm\")\n",
     "\n",
+    "# Retrieve database credentials from AWS Secrets Manager\n",
     "secretsmanager = boto3.client(\"secretsmanager\")\n",
     "secret_response = secretsmanager.get_secret_value(\n",
     "    SecretId=os.environ[\"SQL_DB_SECRET_ID\"]\n",
     ")\n",
     "database_secrets = json.loads(secret_response[\"SecretString\"])\n",
     "\n",
-    "# Extract credentials\n",
+    "# Extract database connection parameters from secrets\n",
     "host = database_secrets['host']\n",
     "dbname = database_secrets['dbname']\n",
     "username = database_secrets['username']\n",
     "password = database_secrets['password']\n",
     "port = database_secrets[\"port\"]\n",
     "\n",
+    "# Create connection string for PGVector\n",
     "CONNECTION_STRING = PGVector.connection_string_from_db_params(\n",
     "    driver=\"psycopg2\",\n",
     "    host=host,\n",
@@ -139,6 +146,7 @@
     "    password=password,\n",
     ")\n",
     "\n",
+    "# Establish direct database connection\n",
     "db_connection = psycopg2.connect(\n",
     "    host=host,\n",
     "    port=port,\n",
@@ -147,12 +155,15 @@
     "    password=password,\n",
     ")\n",
     "\n",
+    "# Configure AWS Bedrock settings\n",
     "BEDROCK_CROSS_ACCOUNT_ROLE_ARN = os.environ.get(\"BEDROCK_CROSS_ACCOUNT_ROLE_ARN\")\n",
     "bedrock_region_parameter = \"/AgenticLLMAssistantWorkshop/bedrock_region\"\n",
     "\n",
+    "# Get Bedrock region from SSM Parameter Store\n",
     "BEDROCK_REGION = ssm.get_parameter(Name=bedrock_region_parameter)\n",
     "BEDROCK_REGION = BEDROCK_REGION[\"Parameter\"][\"Value\"]\n",
     "\n",
+    "# Configure AWS retry settings for Bedrock clients\n",
     "retry_config = Config(\n",
     "    region_name=BEDROCK_REGION,\n",
     "    retries={\"max_attempts\": 10, \"mode\": \"standard\"}\n",
@@ -162,41 +173,47 @@
     "\n",
     "\n",
     "def activate_vector_extension(db_connection):\n",
-    "    \"\"\"Activate PGVector extension.\"\"\"\n",
-    "\n",
+    "    \"\"\"\n",
+    "    Activates the pgvector extension in PostgreSQL database.\n",
+    "    This extension is required for vector similarity search functionality.\n",
+    "    \n",
+    "    Args:\n",
+    "        db_connection: PostgreSQL database connection object\n",
+    "    \"\"\"\n",
     "    db_connection.autocommit = True\n",
     "    cursor = db_connection.cursor()\n",
-    "    # install pgvector\n",
     "    cursor.execute(\"CREATE EXTENSION IF NOT EXISTS vector;\")\n",
     "    db_connection.close()\n",
     "\n",
     "\n",
     "def test_db_connection():\n",
-    "    # Connect to the database\n",
+    "    \"\"\"\n",
+    "    Tests the database connection and prints all table names in the public schema.\n",
+    "    Useful for verifying database connectivity and checking existing tables.\n",
+    "    \"\"\"\n",
     "    conn = psycopg2.connect(\n",
     "        host=host,\n",
     "        database=dbname,\n",
     "        user=username,\n",
     "        password=password\n",
     "    )\n",
-    "    # Get cursor\n",
     "    cur = conn.cursor()\n",
-    "\n",
-    "    # Query to get all tables\n",
     "    cur.execute(\"SELECT table_name FROM information_schema.tables WHERE table_schema='public';\")\n",
-    "\n",
-    "    # Fetch all the tables\n",
     "    tables = cur.fetchall()\n",
-    "\n",
-    "    # Print the table names\n",
     "    print(f\"SQL tables: {tables}\")\n",
-    "\n",
-    "    # Close connection\n",
     "    conn.close()\n",
     "\n",
     "\n",
     "def prepare_documents_with_metadata(documents_processed):\n",
-    "\n",
+    "    \"\"\"\n",
+    "    Converts processed documents into Langchain Document objects with metadata.\n",
+    "    \n",
+    "    Args:\n",
+    "        documents_processed: List of processed document dictionaries\n",
+    "        \n",
+    "    Returns:\n",
+    "        List of Langchain Document objects with text content and metadata\n",
+    "    \"\"\"\n",
     "    langchain_documents_text = []\n",
     "    langchain_documents_tables = []\n",
     "\n",
@@ -204,7 +221,7 @@
     "        document_name = document['name']\n",
     "        document_source_location = document['source_location']\n",
     "        document_s3_metadata = document['metadata']\n",
-    "\n",
+    "        # Create mapping for original page numbers\n",
     "        mapping_to_original_page_numbers = {\n",
     "            idx: pg_num for idx, pg_num\n",
     "            in enumerate(document_s3_metadata[\"pages_kept\"])\n",
@@ -213,6 +230,7 @@
     "        del document_s3_metadata[\"pages_kept\"]\n",
     "\n",
     "        for page in document['pages']:\n",
+    "            # Create metadata dictionary for each page\n",
     "            # Turn each page into a Langchain Document.\n",
     "            # Note: you could choose to also prepend part of the previous document\n",
     "            # and append part of the next document to include more context for documents\n",
@@ -227,6 +245,7 @@
     "            # to be able to use them for filtering.\n",
     "            current_metadata.update(document_s3_metadata)\n",
     "\n",
+    "            # Create Langchain Document object for text content\n",
     "            langchain_documents_text.append(\n",
     "                Document(\n",
     "                    page_content=page['page_text'],\n",
@@ -247,14 +266,26 @@
     "\n",
     "\n",
     "def load_processed_documents(json_file_path):\n",
+    "    \"\"\"\n",
+    "    Loads processed documents from a JSON file.\n",
+    "    \n",
+    "    Args:\n",
+    "        json_file_path: Path to the JSON file containing processed documents\n",
+    "        \n",
+    "    Returns:\n",
+    "        Dictionary containing processed document data\n",
+    "    \"\"\"\n",
     "    with open(json_file_path, 'rb') as file:\n",
     "        processed_documents = json.load(file)\n",
     "    return processed_documents\n",
     "\n",
     "\n",
+    "\n",
     "if __name__ == \"__main__\":\n",
+    "    # Test database connection before processing\n",
     "    test_db_connection()\n",
     "\n",
+    "    # Create SQLAlchemy URL object for database connection\n",
     "    url_object = sqlalchemy.URL.create(\n",
     "        \"postgresql+psycopg2\",\n",
     "        username=username,\n",
@@ -263,18 +294,19 @@
     "        database=dbname,\n",
     "    )\n",
     "\n",
+    "    # Configure processing parameters\n",
     "    input_data_base_path = \"/opt/ml/processing/input/\"\n",
     "    processed_docs_filename = \"documents_processed.json\"\n",
-    "    token_split_chunk_size = 512\n",
-    "    token_chunk_overlap = 64\n",
-    "    # Define an embedding model to generate embeddings\n",
-    "    embedding_model_id = \"amazon.titan-embed-text-v2:0\"\n",
+    "    token_split_chunk_size = 512  # Size of text chunks for embedding\n",
+    "    token_chunk_overlap = 64      # Overlap between chunks to maintain context\n",
+    "    embedding_model_id = \"amazon.titan-embed-text-v2:0\"  # Amazon Bedrock embedding model\n",
     "    COLLECTION_NAME = 'agentic_assistant_vector_store'\n",
-    "    # make this an argument.\n",
-    "    pre_delete_collection = True\n",
+    "    pre_delete_collection = True  # Whether to delete existing collection before adding new documents\n",
     "\n",
+    "    # Create database engine\n",
     "    db_engine = sqlalchemy.create_engine(url_object)\n",
     "\n",
+    "    # Construct path to processed documents\n",
     "    processed_documents_file_path = os.path.join(\n",
     "        input_data_base_path,\n",
     "        \"processed_documents\",\n",
@@ -284,6 +316,7 @@
     "    print(processed_documents_file_path)\n",
     "\n",
     "    if os.path.isfile(processed_documents_file_path):\n",
+    "        # Load and process documents\n",
     "        processed_documents = load_processed_documents(processed_documents_file_path)\n",
     "        langchain_documents_text = prepare_documents_with_metadata(\n",
     "            processed_documents\n",
@@ -292,6 +325,7 @@
     "        # to prevent context from being lost between chunks.\n",
     "        # TODO: the following spliting uses tiktoken,\n",
     "        # create a custom one that use the tokenizer from anthropic.\n",
+    "        # Split documents into chunks for embedding\n",
     "        text_splitter = TokenTextSplitter(\n",
     "            chunk_size=token_split_chunk_size,\n",
     "            chunk_overlap=token_chunk_overlap\n",
@@ -301,13 +335,16 @@
     "            langchain_documents_text\n",
     "        )\n",
     "\n",
+    "        # Initialize Bedrock embedding model\n",
     "        embedding_model = BedrockEmbeddings(\n",
     "            model_id=embedding_model_id,\n",
     "            client=bedrock_runtime\n",
     "        )\n",
     "\n",
+    "        # Activate pgvector extension in database\n",
     "        activate_vector_extension(db_connection)\n",
     "\n",
+    "        # Initialize PGVector store for document embeddings\n",
     "        pgvector_store = PGVector(\n",
     "            collection_name=COLLECTION_NAME,\n",
     "            connection_string=CONNECTION_STRING,\n",
@@ -315,8 +352,10 @@
     "            pre_delete_collection=pre_delete_collection\n",
     "        )\n",
     "\n",
+    "        # Add documents to vector store\n",
     "        pgvector_store.add_documents(langchain_documents_text_chunked)\n",
     "\n",
+    "        # Test similarity search functionality\n",
     "        print(\"test indexing results\")\n",
     "        test_question = \"Who were in the board of directors of Amazon in 2021 and what were their positions?\"\n",
     "        print(pgvector_store.similarity_search_with_score(test_question))\n",
@@ -324,7 +363,8 @@
     "    else:\n",
     "        raise ValueError(f\"{processed_documents_file_path} must be a file.\")\n",
     "\n",
-    "    test_db_connection()\n"
+    "    # Final connection test\n",
+    "    test_db_connection()"
    ]
   },
   {
