--- a/data_pipelines/05-load-sql-tables-into-aurora-postgreSQL.ipynb
+++ b/data_pipelines/05-load-sql-tables-into-aurora-postgreSQL.ipynb
@@ -124,29 +124,37 @@
    "outputs": [],
    "source": [
     "%%writefile scripts/load_sql_tables.py\n",
-    "import json\n",
-    "import os\n",
+    "# Import required libraries\n",
+    "import json  # For parsing JSON data from AWS Secrets Manager\n",
+    "import os    # For operating system operations and path handling\n",
     "\n",
-    "import boto3\n",
-    "import dask.dataframe as dd\n",
-    "import psycopg2\n",
-    "import sqlalchemy\n",
+    "# AWS SDK and data processing libraries\n",
+    "import boto3  # AWS SDK for Python\n",
+    "import dask.dataframe as dd  # For efficient handling of large CSV files\n",
+    "import psycopg2  # PostgreSQL database adapter for Python\n",
+    "import sqlalchemy  # SQL toolkit and ORM\n",
     "\n",
+    "# Initialize AWS Secrets Manager client\n",
     "secretsmanager = boto3.client(\"secretsmanager\")\n",
     "\n",
+    "# Retrieve database credentials from AWS Secrets Manager\n",
+    "# SQL_DB_SECRET_ID should be set as an environment variable\n",
     "secret_response = secretsmanager.get_secret_value(\n",
     "    SecretId=os.environ[\"SQL_DB_SECRET_ID\"]\n",
     ")\n",
     "\n",
+    "# Parse the secret string into a Python dictionary\n",
     "database_secrets = json.loads(secret_response[\"SecretString\"])\n",
     "\n",
-    "# Extract credentials\n",
-    "host = database_secrets['host']\n",
-    "dbname = database_secrets['dbname']\n",
-    "username = database_secrets['username']\n",
-    "password = database_secrets['password']\n",
-    "port = database_secrets[\"port\"]\n",
+    "# Extract individual database connection parameters from secrets\n",
+    "host = database_secrets['host']      # Database host address\n",
+    "dbname = database_secrets['dbname']  # Name of the database\n",
+    "username = database_secrets['username']  # Database username\n",
+    "password = database_secrets['password']  # Database password\n",
+    "port = database_secrets[\"port\"]      # Database port number\n",
     "\n",
+    "# Establish initial database connection using psycopg2\n",
+    "# This connection will be used for database operations\n",
     "db_connection = psycopg2.connect(\n",
     "    host=host,\n",
     "    port=port,\n",
@@ -157,66 +165,95 @@
     "\n",
     "\n",
     "def activate_vector_extension(db_connection):\n",
-    "    \"\"\"Activate PGVector extension.\"\"\"\n",
-    "\n",
+    "    \"\"\"\n",
+    "    Activates the pgvector extension in the PostgreSQL database.\n",
+    "    This extension is required for vector operations in PostgreSQL.\n",
+    "    \n",
+    "    Args:\n",
+    "        db_connection: Active PostgreSQL database connection\n",
+    "        \n",
+    "    Note:\n",
+    "        - Sets autocommit to True to execute DDL statements\n",
+    "        - Creates the vector extension if it doesn't exist\n",
+    "        - Closes the connection after execution\n",
+    "    \"\"\"\n",
     "    db_connection.autocommit = True\n",
     "    cursor = db_connection.cursor()\n",
-    "    # install pgvector\n",
     "    cursor.execute(\"CREATE EXTENSION IF NOT EXISTS vector;\")\n",
     "    db_connection.close()\n",
     "\n",
     "\n",
     "def test_db_connection():\n",
-    "    # Connect to the database\n",
+    "    \"\"\"\n",
+    "    Tests the database connection and lists all tables in the public schema.\n",
+    "    \n",
+    "    This function:\n",
+    "    1. Establishes a new database connection\n",
+    "    2. Creates a cursor object\n",
+    "    3. Queries for all table names in the public schema\n",
+    "    4. Prints the table names\n",
+    "    5. Properly closes the connection\n",
+    "    \n",
+    "    Useful for verifying database connectivity and checking existing tables.\n",
+    "    \"\"\"\n",
     "    conn = psycopg2.connect(\n",
     "        host=host,\n",
     "        database=dbname,\n",
     "        user=username,\n",
     "        password=password\n",
     "    )\n",
-    "    # Get cursor\n",
     "    cur = conn.cursor()\n",
-    "\n",
-    "    # Query to get all tables\n",
     "    cur.execute(\"SELECT table_name FROM information_schema.tables WHERE table_schema='public';\")\n",
-    "\n",
-    "    # Fetch all the tables\n",
     "    tables = cur.fetchall()\n",
-    "\n",
-    "    # Print the table names\n",
     "    print(f\"SQL tables: {tables}\")\n",
-    "\n",
-    "    # Close connection\n",
     "    conn.close()\n",
     "\n",
     "\n",
     "def load_sql_tables(raw_tables_base_path, raw_tables_data_paths, columns_to_load, engine):\n",
-    "    \"\"\"Load csv files as SQL tables into an Amazon Aurora PostgreSQL DB.\n",
-    "\n",
-    "    Note:\n",
-    "        raw_tables_data_paths (List, str): a list of strings, each string\n",
-    "        can be a csv file, or a folder that contains a partitioned csv file.\n",
     "    \"\"\"\n",
-    "\n",
+    "    Loads CSV files into SQL tables in an Amazon Aurora PostgreSQL database.\n",
+    "    \n",
+    "    Args:\n",
+    "        raw_tables_base_path (str): Base directory path containing the CSV files\n",
+    "        raw_tables_data_paths (list): List of CSV files or directories containing partitioned CSV files\n",
+    "        columns_to_load (str/list): Either \"all\" or a list of column names to load\n",
+    "        engine (sqlalchemy.Engine): SQLAlchemy engine for database operations\n",
+    "    \n",
+    "    Returns:\n",
+    "        bool: True if loading completes successfully\n",
+    "        \n",
+    "    Notes:\n",
+    "        - Handles both single CSV files and partitioned CSV files in directories\n",
+    "        - Uses Dask for efficient loading of large CSV files\n",
+    "        - Replaces existing tables if they exist\n",
+    "    \"\"\"\n",
     "    for raw_table_path in raw_tables_data_paths:\n",
+    "        # Construct full path to the data file or directory\n",
     "        data_loading_path = os.path.join(\n",
     "            raw_tables_base_path,\n",
     "            raw_table_path\n",
     "        )\n",
     "\n",
+    "        # Handle directory paths (partitioned CSV files)\n",
     "        if os.path.isdir(data_loading_path):\n",
-    "            data_loading_path = os.path.join(data_loading_path, \"*\")\n",
+    "            data_loading_path = os.path.join(data_loading_path, \"*\")  # Add wildcard for all files\n",
     "            table_name = raw_table_path\n",
     "        else:\n",
+    "            # For single CSV files, use filename without extension as table name\n",
     "            table_name = raw_table_path.split(\".\")[0]\n",
     "\n",
     "        print(f\"Loading {table_name} data into a pandas dataframe\")\n",
+    "        # Read CSV file(s) using Dask and compute to pandas DataFrame\n",
     "        current_data_df = dd.read_csv(data_loading_path).compute()\n",
+    "        \n",
+    "        # Handle column selection\n",
     "        if columns_to_load == \"all\":\n",
     "            columns_to_load = current_data_df.columns\n",
     "\n",
+    "        # Select specified columns\n",
     "        current_data_df = current_data_df[columns_to_load]\n",
     "\n",
+    "        # Write DataFrame to SQL table\n",
     "        current_data_df.to_sql(\n",
     "            table_name, engine, if_exists='replace', index=False\n",
     "        )\n",
@@ -225,24 +262,31 @@
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
+    "    # Test initial database connection\n",
     "    test_db_connection()\n",
     "\n",
+    "    # Create SQLAlchemy URL object for database connection\n",
     "    url_object = sqlalchemy.URL.create(\n",
-    "        \"postgresql+psycopg2\",\n",
+    "        \"postgresql+psycopg2\",  # Specify PostgreSQL driver\n",
     "        username=username,\n",
     "        password=password,\n",
     "        host=host,\n",
     "        database=dbname,\n",
     "    )\n",
     "\n",
+    "    # Create SQLAlchemy engine for database operations\n",
     "    db_engine = sqlalchemy.create_engine(url_object)\n",
     "\n",
-    "    input_data_base_path = \"/opt/ml/processing/input/\"\n",
-    "    raw_sql_tables_base_path = os.path.join(input_data_base_path, \"sqltables\")\n",
-    "    tables_raw_data_paths = os.listdir(raw_sql_tables_base_path)\n",
-    "    columns_to_load = \"all\"\n",
+    "    # Configure paths for data loading\n",
+    "    input_data_base_path = \"/opt/ml/processing/input/\"  # Base path for input data\n",
+    "    raw_sql_tables_base_path = os.path.join(input_data_base_path, \"sqltables\")  # Path to SQL tables directory\n",
+    "    tables_raw_data_paths = os.listdir(raw_sql_tables_base_path)  # List all files/directories to process\n",
+    "    columns_to_load = \"all\"  # Load all columns from CSV files\n",
     "\n",
+    "    # Print paths for debugging\n",
     "    print(raw_sql_tables_base_path, tables_raw_data_paths)\n",
+    "    \n",
+    "    # Load all tables into the database\n",
     "    load_sql_tables(\n",
     "        raw_sql_tables_base_path,\n",
     "        tables_raw_data_paths,\n",
@@ -250,6 +294,7 @@
     "        db_engine\n",
     "    )\n",
     "\n",
+    "    # Test final database connection and verify loaded tables\n",
     "    test_db_connection()\n"
    ]
   },
